Fix layout to force full width and remove side whitespace

--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -67,6 +67,13 @@
     overflow-x: hidden;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+
+    /* Force Full Width (Breakout from WP Container) */
+    width: 100vw;
+    margin-left: calc(-50vw + 50%);
+    margin-right: calc(-50vw + 50%);
+    max-width: 100vw !important;
+    box-sizing: border-box;
 }
 
 /* Background Ambience - Gradient Blurs */
